feat: Added general layout

--- a/styles/base/main.scss
+++ b/styles/base/main.scss
@@ -15,7 +15,9 @@ html {
         }
     }
 }
-
+main.container{
+    flex-direction: column;
+}
 .container {
     margin: 0 auto;
     display: flex;
@@ -35,4 +37,24 @@ html {
 
 .logo{
     max-height: 50px;
+}
+
+.header{
+    display: block;
+    position: relative;
+    color: $white_color;
+    padding: 15px 0;
+    font-weight: 600;
+    margin-bottom: 50px;
+    &::before{
+        content: '';
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 100vw;
+        left: 50%;
+        margin-left: -50vw;
+        z-index: -1;
+        background-color: rgba($primary_color, 0.9);
+    }
 }
