--- a/styles/components/navigation.scss
+++ b/styles/components/navigation.scss
@@ -3,8 +3,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    &::before{
-        content: '';
+
+    &::before {
+        content: "";
         position: absolute;
         top: 0;
         height: 100%;
@@ -14,57 +15,56 @@
         z-index: -1;
         background-color: $primary_color;
     }
-   
-    
-        
-        // margin: 0 auto;
-        .navigation__links {
-            display: flex;
-            .navigation__link {
-                padding: 15px;
-                color: $white_color;
-                @include transition;
-                text-decoration: none;    
-                &._active, &:hover {
-                    background-color: $secondary_color;
-                    color: $link_color;
-                }
+
+    .navigation__links {
+        display: flex;
+
+        .navigation__link {
+            padding: 15px;
+            color: $white_color;
+            @include transition;
+            text-decoration: none;
+
+            &._active,
+            &:hover {
+                background-color: $secondary_color;
+                color: $link_color;
             }
         }
-        // .userInfo {
-        //     padding-right: 2rem;
+    }
 
-        //     .avatar {
-        //         display: flex;
-        //         align-items: center;
-        //         align-content: center;
-        //         padding: 10px;
-        //         @include transition;
-        //         cursor: pointer;
+    // .userInfo {
+    //     padding-right: 2rem;
 
-        //         &:hover {
-        //             background-color: $secondary_color;
-        //             color: $link_color;
-        //         }
+    //     .avatar {
+    //         display: flex;
+    //         align-items: center;
+    //         align-content: center;
+    //         padding: 10px;
+    //         @include transition;
+    //         cursor: pointer;
 
-        //         svg {
-        //             max-width: 30px;
-        //             max-height: 30px;
-        //         }
+    //         &:hover {
+    //             background-color: $secondary_color;
+    //             color: $link_color;
+    //         }
 
-        //         .userName {
-        //             margin-left: 10px;
-        //             color: $white_color;
-        //             font-size: 14px;
-        //         }
+    //         svg {
+    //             max-width: 30px;
+    //             max-height: 30px;
+    //         }
 
-        //         .icon_arrow-downSecond {
-        //             margin-left: 5px;
-        //             color: $white_color;
-        //             font-size: 10px;
-        //         }
-        //     }
-        // }
-   
+    //         .userName {
+    //             margin-left: 10px;
+    //             color: $white_color;
+    //             font-size: 14px;
+    //         }
 
+    //         .icon_arrow-downSecond {
+    //             margin-left: 5px;
+    //             color: $white_color;
+    //             font-size: 10px;
+    //         }
+    //     }
+    // }
 }
