feat: Add Input component

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,4 +1,6 @@
 @import "abstracts/varibles";
 @import "abstracts/mixins";
 @import "base/main";
-@import "components/navigation"
+@import "components/navigation";
+@import "components/tabs";
+@import "components/input";
