feat: Added styles to buttons

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,6 +1,8 @@
 @import "abstracts/varibles";
 @import "abstracts/mixins";
 @import "base/main";
+@import "base/normalize";
 @import "components/navigation";
 @import "components/tabs";
 @import "components/input";
+@import "layout/buttons";
